--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,162 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CryptoTradingX</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
-
 <body>
-  <aside class="sidebar">
-    <h1>CryptoTradingX</h1>
-    <nav>
-      <button data-view="markets" class="active">Markets</button>
-      <button data-view="trade">Trade</button>
-      <button data-view="orders">Orders</button>
-      <button data-view="portfolio">Portfolio</button>
-      <button data-view="auth">Login</button>
-    </nav>
-  </aside>
-
-  <main id="content">
-    <section id="markets" class="view active">
-      <h2>Markets</h2>
-      <div class="cards">
-        <div class="card">
-          <div class="card-head">
-            <b>BTC-USD</b>
-            <span id="btcPrice">—</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-head">
-            <b>ETH-USD</b>
-            <span id="ethPrice">—</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="trade" class="view">
-      <h2>Trade</h2>
-      <form id="tradeForm" class="form">
-        <label>
-          Symbol
-          <select id="symbol">
-            <option>BTC-USD</option>
-            <option>ETH-USD</option>
-          </select>
-        </label>
-
-        <div class="row">
-          <label>
-            Side
-            <select id="side">
-              <option value="BUY">BUY</option>
-              <option value="SELL">SELL</option>
-            </select>
-          </label>
-
-          <label>
-            Type
-            <select id="otype">
-              <option value="MARKET">MARKET</option>
-              <option value="LIMIT">LIMIT</option>
-            </select>
-          </label>
-        </div>
-
-        <div class="row">
-          <label>
-            Quantity
-            <input id="qty" type="number" step="0.0001" min="0" placeholder="0.01" required>
-          </label>
-
-          <label id="priceWrap" class="hidden">
-            Limit Price
-            <input id="price" type="number" step="0.01" min="0" placeholder="30000.00">
-          </label>
-        </div>
-
-        <button class="primary" type="submit">Submit Order</button>
-        <div id="tradeMsg" class="msg"></div>
-      </form>
-    </section>
-
-    <section id="orders" class="view">
-      <h2>Orders</h2>
-      <table id="ordersTable">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Symbol</th>
-            <th>Side</th>
-            <th>Type</th>
-            <th>Qty</th>
-            <th>Price</th>
-            <th>Status</th>
-            <th>Created</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
-
-    <section id="portfolio" class="view">
-      <h2>Portfolio</h2>
-      <table id="portfolioTable">
-        <thead>
-          <tr>
-            <th>Asset</th>
-            <th>Balance</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
-
-    <section id="auth" class="view">
-      <h2>Login / Sign Up</h2>
-      <div class="form two-col">
-        <form id="signupForm">
-          <h3>Sign up</h3>
-          <label>
-            Email
-            <input id="suEmail" type="email" required>
-          </label>
-
-          <label>
-            Password
-            <input id="suPass" type="password" required>
-          </label>
-
-          <button class="secondary" type="submit">Create account</button>
-          <div id="suMsg" class="msg"></div>
-        </form>
-
-        <form id="loginForm">
-          <h3>Login</h3>
-          <label>
-            Email
-            <input id="liEmail" type="email" required>
-          </label>
-
-          <label>
-            Password
-            <input id="liPass" type="password" required>
-          </label>
-
-          <button class="primary" type="submit">Login</button>
-          <div id="liMsg" class="msg"></div>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <script src="app.js"></script>
+  <script>
+    // Simple client router
+    const t = localStorage.getItem('token');
+    location.replace(t ? 'portal.html' : 'auth/auth.html');
+  </script>
+  <noscript>
+    JavaScript is required. Go to <a href="auth/auth.html">Sign in</a>.
+  </noscript>
 </body>
-
 </html>
