Added new features and fixed structure

--- a/Frontend/auth/auth.html
+++ b/Frontend/auth/auth.html
@@ -62,6 +62,7 @@
   </div>
 
   <script src="../config.js"></script>
+  <script src="../utils.js"></script>
   <script src="auth.js"></script>
 </body>
 </html>
