--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@
   <script>
     // Simple client router
     const t = localStorage.getItem('token');
-    location.replace(t ? 'portal.html' : 'auth/auth.html');
+    location.replace(t ? 'markets/market.html' : 'auth/auth.html');
   </script>
   <noscript>
     JavaScript is required. Go to <a href="auth/auth.html">Sign in</a>.
