--- a/Frontend/trade/trade.html
+++ b/Frontend/trade/trade.html
@@ -39,13 +39,21 @@
         <input id="price" type="number" step="0.01" />
       </div>
       <div class="col-span-1">
-        <label>Quantity</label>
-        <input id="qty" type="number" step="0.0001" />
+        <label>Amount</label>
+        <input id="qty" type="number" inputmode="decimal" min="0" step="0.00000001" placeholder="0.01" />
       </div>
       <div class="submit-wrap">
         <button class="btn" id="submitOrderBtn">Submit order</button>
       </div>
     </section>
+    <div class="exchange-row">
+      <div class="card exchange-card">
+        <h3 class="exchange-title">Exchange</h3>
+        <input id="rateQty" class="exchange-qty" type="number" inputmode="decimal" min="0" step="0.00000001" value="1" />
+        <select id="rateCoin" class="exchange-coin"></select>
+        <div class="exchange-result">= <strong id="rateResult">--</strong> USD</div>
+      </div>
+    </div>
     <p id="tradeMsg" class="msg section-pad"></p>
     <form id="orderForm"></form>
   </main>
