Fixed table css and styling

--- a/Frontend/orders/orders.html
+++ b/Frontend/orders/orders.html
@@ -70,7 +70,7 @@
 
       <!-- Scrollable table wrapper -->
       <div class="table-scroll">
-        <table id="ordersTable" class="table">
+        <table id="ordersTable" class="table orders-table">
           <colgroup>
             <col class="col-id" />
             <col class="col-symbol" />
