--- a/Frontend/trade/trade.html
+++ b/Frontend/trade/trade.html
@@ -40,7 +40,7 @@
             <input id="buyerName" class="input" type="text" autocomplete="name" placeholder="Full name on card" required />
           </div>
           <div class="full">
-            <label for="buyerEmail">Email (receipt)</label>
+            <label for="buyerEmail">Email</label>
             <input id="buyerEmail" class="input" type="email" autocomplete="email" placeholder="you@example.com" required />
           </div>
           <div class="full">
