--- a/Frontend/portfolio/portfolio.html
+++ b/Frontend/portfolio/portfolio.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio • CryptoTradingX</title>
-  <link rel="stylesheet" href="../shared/reset.css" />
+
   <link rel="stylesheet" href="portfolio.css" />
   <link rel="icon" href="../shared/favicon.png" />
 </head>
@@ -75,7 +75,10 @@
     </section>
   </main>
 
+  <script src="../config.js"></script>
+  <script src="../utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="portfolio.js"></script>
+
 </body>
 </html>
