--- a/Frontend/trade/trade.html
+++ b/Frontend/trade/trade.html
@@ -45,7 +45,9 @@
           </div>
           <div class="full">
             <label>Card details</label>
-            <div id="card-element"></div>
+            <div class="stripe-card-outer">
+              <div id="card-element" class="stripe-card-inner"></div>
+            </div>
             <div id="card-errors" role="alert"></div>
           </div>
         </div>
